// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for the connected Sidebar component with reduxInitialState should render with given state from Redux store 1`] = `
.c5.c5 {
  background-color: #fff;
  font-size: 1.4rem;
  line-height: 2;
  padding: 0 1.2rem;
  display: block;
  border-radius: 3px;
  border: 1px solid;
}

.c5.c5.c5.c5:hover:before,
.c5.c5:before {
  border: 0px;
}

.c5.c5 .MuiSelect-select:focus {
  background-color: transparent;
}

.c4 {
  margin: 2.4rem 1.2rem 0.4rem;
  font-size: 1.2rem;
  line-height: 2;
  -webkit-letter-spacing: 0.05rem;
  -moz-letter-spacing: 0.05rem;
  -ms-letter-spacing: 0.05rem;
  letter-spacing: 0.05rem;
  text-transform: uppercase;
  display: block;
  font-weight: 700;
}

.c6 {
  padding: 1.3rem;
}

.c6.reported-cases-wrapper {
  border-bottom: 1px solid #ccc;
}

.c7 {
  margin: 0.6rem 0;
}

.c8 {
  margin-bottom: 0.3rem;
}

.c9 {
  display: inline-block;
  width: 2rem;
  height: 2rem;
  margin-bottom: -0.3rem;
  margin-right: 0.8em;
}

.c10 {
  display: inline-block;
  font-size: 1.8em;
}

.c0 {
  position: absolute;
  left: 0;
  bottom: 0;
  width: calc( - 3.2rem);
  padding: 2.4rem 1.6rem;
  overflow: auto;
  z-index: 2;
}

.c3 select {
  color: #fff;
  background-color: #e43b46;
}

.c3 option {
  color: #fff;
  background-color: #e43b46;
}

.c1 select {
  color: #fff;
  background-color: #000;
}

.c1 option {
  color: #fff;
  background-color: #000;
}

.c2 {
  margin: 0rem 1.2rem 0.4rem;
  font-size: 1.2rem;
  line-height: 2;
  -webkit-letter-spacing: 0.05rem;
  -moz-letter-spacing: 0.05rem;
  -ms-letter-spacing: 0.05rem;
  letter-spacing: 0.05rem;
  text-transform: uppercase;
  display: block;
  font-weight: 700;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      className="c2"
    >
      Location
    </label>
    <div
      aria-expanded={false}
      aria-owns={null}
      className="MuiAutocomplete-root MuiAutocomplete-hasPopupIcon"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="combobox"
    >
      <div
        className="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
      >
        <div
          className="MuiInputBase-root MuiOutlinedInput-root MuiAutocomplete-inputRoot CountrySelect-inputRoot-1 MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
          onClick={[Function]}
        >
          <input
            aria-activedescendant={null}
            aria-autocomplete="list"
            aria-controls={null}
            aria-invalid={false}
            autoCapitalize="none"
            autoComplete="off"
            autoFocus={false}
            className="MuiInputBase-input MuiOutlinedInput-input MuiAutocomplete-input MuiAutocomplete-inputFocused MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
            disabled={false}
            id="country-select"
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            required={false}
            spellCheck="false"
            type="text"
            value=""
          />
          <div
            className="MuiAutocomplete-endAdornment"
          >
            <button
              aria-label="Open"
              className="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-popupIndicator"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={-1}
              title="Open"
              type="button"
            >
              <span
                className="MuiIconButton-label"
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
              </span>
            </button>
          </div>
          <fieldset
            aria-hidden={true}
            className="PrivateNotchedOutline-root-2 MuiOutlinedInput-notchedOutline"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="PrivateNotchedOutline-legend-3"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c3"
  >
    <label
      className="c4"
    >
      outbreak
    </label>
    <div
      className="MuiInputBase-root MuiInput-root MuiInput-underline c5"
      onClick={[Function]}
    >
      <div
        aria-haspopup="listbox"
        aria-labelledby="mui-component-select-outbreak"
        className="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
        id="mui-component-select-outbreak"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="button"
        tabIndex={0}
      >
        Ebola Outbreak
      </div>
      <input
        aria-hidden={true}
        className="MuiSelect-nativeInput"
        name="outbreak"
        onAnimationStart={[Function]}
        onChange={[Function]}
        tabIndex={-1}
        value="Ebola Outbreak"
      />
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSelect-icon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
    </div>
  </div>
  <fieldset
    className="MuiFormControl-root"
  >
    <legend
      className="MuiFormLabel-root"
    >
      DATA
    </legend>
    <div
      aria-label="data"
      className="MuiFormGroup-root"
      role="radiogroup"
    >
      <label
        className="MuiFormControlLabel-root"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-6 MuiRadio-root MuiRadio-colorSecondary PrivateSwitchBase-checked-7 Mui-checked MuiIconButton-colorSecondary"
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label"
          >
            <input
              checked={true}
              className="PrivateSwitchBase-input-9"
              disabled={false}
              name="data"
              onChange={[Function]}
              type="radio"
              value="cases"
            />
            <div
              className="PrivateRadioButtonIcon-root-10 PrivateRadioButtonIcon-checked-12"
            >
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root PrivateRadioButtonIcon-layer-11"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </div>
          </span>
        </span>
        <span
          className="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
        >
          Cases
        </span>
      </label>
      <label
        className="MuiFormControlLabel-root"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-6 MuiRadio-root MuiRadio-colorSecondary MuiIconButton-colorSecondary"
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label"
          >
            <input
              checked={false}
              className="PrivateSwitchBase-input-9"
              disabled={false}
              name="data"
              onChange={[Function]}
              type="radio"
              value="projected cases"
            />
            <div
              className="PrivateRadioButtonIcon-root-10"
            >
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root PrivateRadioButtonIcon-layer-11"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </div>
          </span>
        </span>
        <span
          className="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
        >
          Projected Cases
        </span>
      </label>
    </div>
  </fieldset>
  <div
    className="c6 reported-cases-wrapper"
  >
    <p>
      <strong>
        Reported cases
         from:
        <br />
        Wed Oct 01 2014
         to
         
        Sat Feb 20 2016
      </strong>
    </p>
    <div
      className="c7"
    >
      <div
        className="c8"
      >
        Suspected and confirmed
      </div>
      <div
        className="c9"
        style={
          Object {
            "backgroundColor": "#4D73CE",
          }
        }
      />
      <div
        className="c10"
      >
        0
      </div>
    </div>
  </div>
  <div
    className="c6"
  >
    <h4>
      SUMMARY
    </h4>
    <p>
      From 
      Wed Oct 01 2014
       to 
      Sat Feb 20 2016
      , the Ebola outbreak in 
      West Africa
       
      has affected
       
      0
       people
       (suspected and confirmed cases)
      .
    </p>
  </div>
</div>
`;

exports[`Tests for the connected Sidebar component with riskViewState should render with given state from Redux store 1`] = `
.c5.c5 {
  background-color: #fff;
  font-size: 1.4rem;
  line-height: 2;
  padding: 0 1.2rem;
  display: block;
  border-radius: 3px;
  border: 1px solid;
}

.c5.c5.c5.c5:hover:before,
.c5.c5:before {
  border: 0px;
}

.c5.c5 .MuiSelect-select:focus {
  background-color: transparent;
}

.c4 {
  margin: 2.4rem 1.2rem 0.4rem;
  font-size: 1.2rem;
  line-height: 2;
  -webkit-letter-spacing: 0.05rem;
  -moz-letter-spacing: 0.05rem;
  -ms-letter-spacing: 0.05rem;
  letter-spacing: 0.05rem;
  text-transform: uppercase;
  display: block;
  font-weight: 700;
}

.c6 {
  padding: 1.3rem;
}

.c6.reported-cases-wrapper {
  border-bottom: 1px solid #ccc;
}

.c0 {
  position: absolute;
  left: 0;
  bottom: 0;
  width: calc( - 3.2rem);
  padding: 2.4rem 1.6rem;
  overflow: auto;
  z-index: 2;
}

.c3 select {
  color: #fff;
  background-color: #e43b46;
}

.c3 option {
  color: #fff;
  background-color: #e43b46;
}

.c1 select {
  color: #fff;
  background-color: #000;
}

.c1 option {
  color: #fff;
  background-color: #000;
}

.c2 {
  margin: 0rem 1.2rem 0.4rem;
  font-size: 1.2rem;
  line-height: 2;
  -webkit-letter-spacing: 0.05rem;
  -moz-letter-spacing: 0.05rem;
  -ms-letter-spacing: 0.05rem;
  letter-spacing: 0.05rem;
  text-transform: uppercase;
  display: block;
  font-weight: 700;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      className="c2"
    >
      Location
    </label>
    <div
      aria-expanded={false}
      aria-owns={null}
      className="MuiAutocomplete-root MuiAutocomplete-hasPopupIcon"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="combobox"
    >
      <div
        className="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
      >
        <div
          className="MuiInputBase-root MuiOutlinedInput-root MuiAutocomplete-inputRoot CountrySelect-inputRoot-1 MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
          onClick={[Function]}
        >
          <input
            aria-activedescendant={null}
            aria-autocomplete="list"
            aria-controls={null}
            aria-invalid={false}
            autoCapitalize="none"
            autoComplete="off"
            autoFocus={false}
            className="MuiInputBase-input MuiOutlinedInput-input MuiAutocomplete-input MuiAutocomplete-inputFocused MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
            disabled={false}
            id="country-select"
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            required={false}
            spellCheck="false"
            type="text"
            value="All"
          />
          <div
            className="MuiAutocomplete-endAdornment"
          >
            <button
              aria-label="Open"
              className="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-popupIndicator"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={-1}
              title="Open"
              type="button"
            >
              <span
                className="MuiIconButton-label"
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </button>
          </div>
          <fieldset
            aria-hidden={true}
            className="PrivateNotchedOutline-root-2 MuiOutlinedInput-notchedOutline"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="PrivateNotchedOutline-legend-3"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c3"
  >
    <label
      className="c4"
    >
      outbreak
    </label>
    <div
      className="MuiInputBase-root MuiInput-root MuiInput-underline c5"
      onClick={[Function]}
    >
      <div
        aria-haspopup="listbox"
        aria-labelledby="mui-component-select-outbreak"
        className="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
        id="mui-component-select-outbreak"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        role="button"
        tabIndex={0}
      >
        Ebola Outbreak
      </div>
      <input
        aria-hidden={true}
        className="MuiSelect-nativeInput"
        name="outbreak"
        onAnimationStart={[Function]}
        onChange={[Function]}
        tabIndex={-1}
        value="Ebola Outbreak"
      />
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSelect-icon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
    </div>
  </div>
  <fieldset
    className="MuiFormControl-root"
  >
    <legend
      className="MuiFormLabel-root"
    >
      DATA
    </legend>
    <div
      aria-label="data"
      className="MuiFormGroup-root"
      role="radiogroup"
    >
      <label
        className="MuiFormControlLabel-root"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-6 MuiRadio-root MuiRadio-colorSecondary PrivateSwitchBase-checked-7 Mui-checked MuiIconButton-colorSecondary"
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label"
          >
            <input
              checked={true}
              className="PrivateSwitchBase-input-9"
              disabled={false}
              name="data"
              onChange={[Function]}
              type="radio"
              value="cases"
            />
            <div
              className="PrivateRadioButtonIcon-root-10 PrivateRadioButtonIcon-checked-12"
            >
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root PrivateRadioButtonIcon-layer-11"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </div>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </span>
        <span
          className="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
        >
          Cases
        </span>
      </label>
      <label
        className="MuiFormControlLabel-root"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-6 MuiRadio-root MuiRadio-colorSecondary MuiIconButton-colorSecondary"
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label"
          >
            <input
              checked={false}
              className="PrivateSwitchBase-input-9"
              disabled={false}
              name="data"
              onChange={[Function]}
              type="radio"
              value="projected cases"
            />
            <div
              className="PrivateRadioButtonIcon-root-10"
            >
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root PrivateRadioButtonIcon-layer-11"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </div>
          </span>
          <span
            className="MuiTouchRipple-root"
          />
        </span>
        <span
          className="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
        >
          Projected Cases
        </span>
      </label>
    </div>
  </fieldset>
  <div
    className="c6"
  >
    <h4>
      SUMMARY
    </h4>
    <p>
      From 
      Wed Oct 01 2014
       to 
      Sat Feb 20 2016
      , the Ebola outbreak in 
      West Africa
       
      has affected
       
      0
       people
       (suspected and confirmed cases)
      .
    </p>
  </div>
  <div
    className="c6"
  >
    <strong>
      <p>
        The top 10 countries with the highest relative risk of Ebola spread are:
      </p>
    </strong>
    <ol>
      <li>
        Guinea
      </li>
      <li>
        Nigeria
      </li>
      <li>
        Ivory Coast
      </li>
      <li>
        Sierra Leone
      </li>
      <li>
        Mali
      </li>
      <li>
        Liberia
      </li>
      <li>
        Senegal
      </li>
      <li>
        Ghana
      </li>
      <li>
        Burkina Faso
      </li>
      <li>
        Democratic Republic of the Congo
      </li>
    </ol>
  </div>
</div>
`;
